--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,7 @@ Session.vim
 !.config/newsbeuter/solarized-dark
 !.config/newsbeuter/urls
 !.config/rtv/rtv.cfg
+!.config/termite
 !.config/todo
 !.config/vifm/colors/solarized-dark.vifm
 !.config/vifm/vifmrc
