--- a/.config/rtv/rtv.cfg
+++ b/.config/rtv/rtv.cfg
@@ -34,6 +34,15 @@ clear_auth = False
 ; Maximum number of opened links that will be saved in the history file.
 history_size = 200
 
+; Open external links using programs defined in the mailcap config.
+enable_media = True
+
+; Maximum number of columns for a comment
+max_comment_cols = 120
+
+; Hide username if logged in, display "Logged in" instead
+hide_username = False
+
 ################
 # OAuth Settings
 ################
@@ -98,6 +107,8 @@ MOVE_UP = k, <KEY_UP>
 MOVE_DOWN = j, <KEY_DOWN>
 PAGE_UP = m, <KEY_PPAGE>, <NAK>
 PAGE_DOWN = n, <KEY_NPAGE>, <EOT>
+PAGE_TOP = gg
+PAGE_BOTTOM = G
 UPVOTE = a
 DOWNVOTE = z
 LOGIN = u
@@ -105,6 +116,7 @@ DELETE = d
 EDIT = e
 INBOX = i
 REFRESH = r, <KEY_F5>
+PROMPT = /
 SAVE = w
 
 ; Submission page
@@ -117,7 +129,6 @@ SUBMISSION_OPEN_IN_URLVIEWER = b
 
 ; Subreddit page
 SUBREDDIT_SEARCH = f
-SUBREDDIT_PROMPT = /
 SUBREDDIT_POST = c
 SUBREDDIT_OPEN = l, <KEY_RIGHT>
 SUBREDDIT_OPEN_IN_BROWSER = o, <LF>, <KEY_ENTER>, <KEY_ENTER>
