--- a/.config/i3/config
+++ b/.config/i3/config
@@ -9,7 +9,7 @@ set $mod Mod4
 set $tabKey Mode_switch
 
 # layout mode for new container
-# workspace_layout default
+workspace_layout tabbed
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below. ISO 10646 = Unicode
@@ -82,7 +82,7 @@ bindsym $mod+f fullscreen
 # change container layout (stacked, tabbed, toggle split)
 bindsym $mod+s layout stacking
 bindsym $mod+w layout tabbed
-bindsym $mod+e layout toggle split
+bindsym $mod+e layout splith
 
 # toggle tiling / floating
 bindsym $mod+Shift+space floating toggle
@@ -112,14 +112,14 @@ set $menu7 7:tmux-weechat
 
 
 # switch to workspace
-bindsym $mod+1 workspace $menu1; layout tabbed; exec [ $( ps -eo cmd | grep -c '[t]ermite --title console' ) -eq 2 ] && termite --title console
-bindsym $mod+2 workspace $menu2; layout tabbed; exec [ $(ps h -C vimb | wc -l) = 0 ] && /usr/bin/vimb -s
+bindsym $mod+1 workspace $menu1; exec [ $( ps -eo cmd | grep -c '[t]ermite --title console' ) -eq 2 ] && termite --title console
+bindsym $mod+2 workspace $menu2; exec [ $(ps h -C vimb | grep -v "autohide" | wc -l) = 0 ] && /usr/bin/vimb
 bindsym $mod+3 workspace $menu3; layout splith; exec [ $( ps -eo cmd | grep -c '[t]ermite --title uvim -e vim' ) -eq 2 ] && termite --title uvim -e vim
 #bindsym $mod+4 workspace $menu4; layout tabbed; exec [ $( ps -eo cmd | grep -c '[u]rxvt -title muttgmail -e mutt' ) -eq 2 ] && urxvt -title muttgmail -e mutt -e "source ~/.mutt/gmail.com"
-bindsym $mod+4 workspace $menu4; layout tabbed; exec [ $( ps -eo cmd | grep -c '[t]ermite --title muttgmail' ) -eq 2 ] && termite --title muttgmail -e 'mutt -e "source ~/.mutt/gmail.com"'
-bindsym $mod+5 workspace $menu5; layout tabbed; exec [ $( ps -eo cmd | grep -c '[t]ermite --title muttperso' ) -eq 2 ] && termite --title muttperso -e 'mutt -e "source ~/.mutt/newmanity.com"'
-bindsym $mod+6 workspace $menu6; layout tabbed; exec [ $( ps -eo cmd | grep -c '[t]ermite --title muttjit' ) -eq 2 ] && termite --title muttjit -e 'mutt -e "source ~/.mutt/jobintree.com"'
-bindsym $mod+7 workspace $menu7; layout tabbed; exec [ $( ps -eo cmd | grep -c '[u]rxvt -title tmux-weechat -e ssh -t david@do.tyjak.net LANG=fr_FR.UTF-8 tmux a -t weechat' ) -eq 2 ] && urxvt -title tmux-weechat -e ssh -t david@do.tyjak.net LANG=fr_FR.UTF-8 tmux a -t weechat
+bindsym $mod+4 workspace $menu4; exec [ $( ps -eo cmd | grep -c '[t]ermite --title mail-gmail' ) -eq 2 ] && termite --title mail-gmail -e 'mutt -e "source ~/.mutt/gmail.com"'
+bindsym $mod+5 workspace $menu5; exec [ $( ps -eo cmd | grep -c '[t]ermite --title muttperso' ) -eq 2 ] && termite --title muttperso -e 'mutt -e "source ~/.mutt/newmanity.com"'
+bindsym $mod+6 workspace $menu6; exec [ $( ps -eo cmd | grep -c '[t]ermite --title muttjit' ) -eq 2 ] && termite --title muttjit -e 'mutt -e "source ~/.mutt/jobintree.com"'
+bindsym $mod+7 workspace $menu7; exec [ $( ps -eo cmd | grep -c '[u]rxvt -title tmux-weechat -e ssh -t david@do.tyjak.net LANG=fr_FR.UTF-8 tmux a -t weechat' ) -eq 2 ] && urxvt -title tmux-weechat -e ssh -t david@do.tyjak.net LANG=fr_FR.UTF-8 tmux a -t weechat
 bindsym $mod+8 workspace 8
 bindsym $mod+9 workspace 9
 bindsym $mod+0 workspace 10
@@ -143,13 +143,17 @@ bindsym $mod+Shift+r restart
 # exit i3 (logs you out of your X session)
 bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -b 'Yes, exit i3' 'i3-msg exit'"
 
+# TODO: verify precedence with /etc/acpi/handler.sh
 set $sink `pactl list short sinks | grep RUNNING | head -1 | cut -f1`
-bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume $sink +5%
-bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume $sink -5%
-bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute $sink toggle
+#bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume $sink +5%
+#bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume $sink -5%
+bindsym XF86AudioMute exec --no-startup-id amixer set Master toggle
 bindsym XF86AudioNext exec mpc next
 bindsym XF86AudioPrev exec mpc prev
 bindsym XF86AudioPause exec mpc toggle
+#pb authorisation
+#bindsym XF86MonBrightnessDown   exec xbacklight -dec 5 && pkill -RTMIN+20 i3blocks
+#bindsym XF86MonBrightnessUp     exec xbacklight -inc 5 && pkill -RTMIN+20 i3blocks
 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
@@ -194,7 +198,7 @@ for_window [title="filemanager"] border 1pixel, layout tabbed;
 for_window [title="JACK.*"] float;
 
 # assign graphic app to dedicated workspace
-assign [class="(pinta|Inkscpae)"] graphic
+assign [class="(pinta|Inkscape)"] graphic
 for_window [class="(pinta|Inkscape)"] focus
 #assign [class="Vimb"] web
 #for_window [class="Vimb"] layout tabbed; focus
@@ -209,13 +213,14 @@ for_window [title="scratchpad_vimb"] sticky enable, border 1pixel, move scratchp
 for_window [title="Franz"] sticky enable, border 1pixel, move scratchpad, resize set 720 874, scratchpad show, move absolute position 720px 24px; 
 for_window [title="scratchpad_ncmpcpp"] sticky enable, border 1pixel, move scratchpad, resize set 640  400, scratchpad show; 
 for_window [title="scratchpad_cal"] sticky enable, border 1pixel, move scratchpad, scratchpad show; 
+for_window [title="iCloud"] sticky enable, border 1pixel, move scratchpad, scratchpad show; 
 
 client.focused #859900 #859900 #eee8d5 #859900
 client.focused_inactive #073642 #073642 #586e75 #6c71c4
 client.unfocused #073642 #073642 #93a1a1 #586e75
 client.urgent #d33682 #d33682 #fdf6e3 #dc322f
 
-set $Locker i3lock -i ~/.config/wallpaper/solarized-dark.png && sleep 1
+set $Locker i3lock -i ~/.config/wallpaper/solarized-dark.png -c 002b36 && sleep 1
 
 # resize mod window $mod+r (you can also use the mouse for that)
 bindsym $mod+r mode "resize"
@@ -259,7 +264,8 @@ bindsym $mod+Shift+s mode "$mode_screenshot"
 
 mode "$mode_screenshot" {
 
-    bindsym s exec maim --opengl --magnify -s ~/Desktop/screenshot-$(date +%F-%H%M%S).png, mode "default"
+    #bindsym s exec maim --opengl --magnify -s ~/Desktop/screenshot-$(date +%F-%H%M%S).png, mode "default"
+    bindsym s exec maim -s ~/Desktop/screenshot-$(date +%F-%H%M%S).png, mode "default"
     bindsym f exec maim ~/Desktop/screenshot-$(date +%F-%H%M%S).png, mode "default"
 
     bindsym Return mode "default"
@@ -286,6 +292,7 @@ mode "$mode_filemanager" {
 # system mode, hit power button to halt, suspend, reboot or shutdown 
 set $mode_system System [l] lock, [e] logout, [s] suspend, [h] hibernate, [r] reboot, [Shift]+[s] shutdown
 bindsym Pause mode "$mode_system"
+bindsym XF86Eject mode "$mode_system"
 
 mode "$mode_system" {
 
