--- a/.config/vimb/config
+++ b/.config/vimb/config
@@ -1,11 +1,13 @@
-set hintkeys=sdfghjkl
+set home-page=https://github.com/fanglingsu/vimb
+set hint-keys=sdfghjkl
 set caret=true
-set input-fg-normal=#839496
-set input-bg-normal=#002b36
-set status-ssl-color-fg=#002b36
-set status-ssl-color-bg=#839496
-set status-color-fg=#586e75
-set status-color-bg=#eee8d5
+set input-autohide=true
+#set input-fg-normal=#839496
+#set input-bg-normal=#002b36
+#set status-ssl-color-fg=#002b36
+#set status-ssl-color-bg=#839496
+#set status-color-fg=#586e75
+#set status-color-bg=#eee8d5
 set download-path=~/downloads/
 set webinspector=true
 nn D :q<CR>
@@ -16,10 +18,13 @@ shortcut-add g=http://search.uselilo.org/searchweb.php?q=$0
 shortcut-add a=https://duckduckgo.com/html/?q=!gifl%20ansible+$0
 set strict-ssl=false
 
+handler-add mailto=gmail %s
+handler-add ftp=termite -e wget %s -P ~/downloads
+
 #nmap ,,v :source ~/.config/vimb/config
 nmap ,,o :sh /bin/sh -c "xdg-open ~/downloads/\$(ls -1 -t ~/downloads/ | head -1)"<CR>
 nmap ,,D :sh /bin/sh -c "rm ~/downloads/\$(ls -1 -t ~/downloads/ | head -1)"<CR>
-nmap ,;b :o ./.config/vimb/bookmark<CR>
+nmap ,;b ::e! bookmarkFileToHtml('file:///home/david/.config/vimb/bookmark')<CR>
 nmap ,,; ::sh! ~/share/bin/vimbmkpwd<CR>
 
 nmap ,,i ::e! instapaper()<CR>
@@ -27,9 +32,21 @@ nmap ,,f ::e! facebook()<CR>
 nmap ,,a ::e! archive()<CR>::bma archive<CR>
 nmap ,;a ::e! getArchive()<CR>
 
-set proxy=true
+#set proxy=true
 nmap ,,p :o http://config.privoxy.org/toggle<CR>
 
-aug bookmark
-	autocmd LoadFinished file:///*/bookmark e! bookmarkFileToHtml();
-aug end
+#aug bookmark
+#	autocmd LoadFinished file:///*/bookmark e! bookmarkFileToHtml();
+#aug end
+
+# GUI color settings
+# Color scheme: Base16 Eighties (https://github.com/chriskempson/base16)
+set completion-css=color:#839496;background-color:#002b36;font:10pt DejaVu Sans Mono;
+set completion-hover-css=color:#839496;background-color:#002b36;font:10pt DejaVu Sans Mono;
+set completion-selected-css=color:#839496;background-color:#515151;font:10pt DejaVu Sans Mono;
+set input-css=color:#839496;background-color:#002b36;font:10pt DejaVu Sans Mono;
+set input-error-css=color:#f2777a;background-color:#002b36;font:10pt DejaVu Sans Mono;
+set status-css=color:#586e75;background-color:#eee8d5;font:10pt DejaVu Sans Mono;
+set status-ssl-css=color:#839496;background-color:#002b36;font:10pt DejaVu Sans Mono;
+set status-ssl-invalid-css=color:#f2777a;background-color:#002b36;font:10pt DejaVu Sans Mono;
+
