--- a/.config/i3/config
+++ b/.config/i3/config
@@ -33,6 +33,7 @@ bindsym $mod+Shift+q kill
 # start dmenu (a program launcher)
 bindsym $mod+d exec dmenu_run -i -nb '#859900' -nf '#eee8d5' -sb '#cb4b16' -fn 'Meslo LG S DZ for Powerline-10' -h 24
 bindsym $mod+c exec clipmenu -i -nb '#2aa198' -nf '#eee8d5' -sb '#cb4b16' -fn 'Meslo LG S DZ for Powerline-10' -h 24
+bindsym $mod+x exec passmenu -i -nb '#002b36' -nf '#eee8d5' -sb '#b58900' -fn 'Meslo LG S DZ for Powerline-10' -h 24
 # There also is the (new) i3-dmenu-desktop which only displays applications
 # shipping a .desktop file. It is a wrapper around dmenu, so you need that
 # installed.
@@ -195,7 +196,8 @@ for_window [class="Vimb"] border 1pixel
 #for_window [class="Vimb"] border 1pixel
 for_window [class="Gvim"] border 1pixel
 for_window [title="filemanager"] border 1pixel, layout tabbed;
-for_window [title="JACK.*"] float;
+for_window [title="JACK.*"] floating enable;
+for_window [title="pinentry"] floating enable;
 
 # assign graphic app to dedicated workspace
 assign [class="(pinta|Inkscape)"] graphic
@@ -321,6 +323,6 @@ bindsym $tabKey+e exec [ $( ps -eo cmd | grep -c '[t]ermite --title scratchpad_c
 
 
 # Enable/disable logging
-bindsym $mod+x shmlog toggle
+#bindsym $mod+x shmlog toggle
 
 
