--- a/.config/gtk-3.0/settings.ini
+++ b/.config/gtk-3.0/settings.ini
@@ -1,5 +1,5 @@
 [Settings]
-gtk-theme-name=Arc-Dark
+gtk-theme-name=NumixSolarizedDarkGreen
 gtk-icon-theme-name=Adwaita
 gtk-font-name=Cantarell 11
 gtk-cursor-theme-name=Adwaita
