--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,6 @@ Session.vim
 !.config/vimperator/vimperatorrc.local
 !.config/wallpaper
 !.config/vimb/scripts.js
-!.config/vimb/bookmark
 !.config/vimb/config
 !.config/vimb/style.css
+!.config/vimb/standalone
