--- a/.config/i3/config
+++ b/.config/i3/config
@@ -18,7 +18,7 @@ workspace_layout tabbed
 # clear in small sizes. However, if you need a lot of unicode glyphs or
 # right-to-left text rendering, you should instead use pango for rendering and
 # chose a FreeType font, such as:
-font pango:Meslo LG S DZ for Powerline, icons, FontAwesome, Devicons, 10
+font pango:MesloLGSDZ Nerd Font Mono, icons, FontAwesome, Devicons, 10
 
 # Use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
@@ -30,9 +30,9 @@ bindsym $mod+Return exec i3-sensible-terminal;
 bindsym $mod+Shift+q kill
 
 # start dmenu (a program launcher)
-bindsym $mod+d exec dmenu_run -i -nb '#859900' -nf '#eee8d5' -sb '#cb4b16' -fn 'Meslo LG S DZ for Powerline-10' -h 24
-bindsym $mod+c exec clipmenu -i -nb '#2aa198' -nf '#eee8d5' -sb '#cb4b16' -fn 'Meslo LG S DZ for Powerline-10' -h 24
-bindsym $mod+x exec passmenu -i -nb '#002b36' -nf '#eee8d5' -sb '#b58900' -fn 'Meslo LG S DZ for Powerline-10' -h 24
+bindsym $mod+d exec dmenu_run -i -nb '#859900' -nf '#eee8d5' -sb '#cb4b16' -fn 'MesloLGSDZ Nerd Font-10' -h 36
+bindsym $mod+c exec clipmenu -i -nb '#2aa198' -nf '#eee8d5' -sb '#cb4b16' -fn 'MesloLGSDZ Nerd Font-10' -h 36
+bindsym $mod+x exec passmenu -i -nb '#002b36' -nf '#eee8d5' -sb '#b58900' -fn 'MesloLGSDZ Nerd Font-10' -h 36
 # There also is the (new) i3-dmenu-desktop which only displays applications
 # shipping a .desktop file. It is a wrapper around dmenu, so you need that
 # installed.
@@ -108,9 +108,9 @@ set $vimIcon 
 set $menu1 1: terminal
 set $menu2 2: web
 set $menu3 3:
-set $menu4 4:  gmail
-set $menu5 5:  perso
-set $menu6 6:  JIT
+set $menu4 4: gmail
+set $menu5 5:
+set $menu6 6: JIT
 set $menu7 7:tmux-weechat
 
 
@@ -120,7 +120,8 @@ bindsym $mod+2 workspace $menu2; exec [ $(ps h -C vimb | grep -v "autohide" | wc
 bindsym $mod+3 workspace $menu3; layout splith; exec [ $( ps -eo cmd | grep -c '[t]ermite --title uvim -e vim' ) -eq 2 ] && termite --title uvim -e vim
 #bindsym $mod+4 workspace $menu4; layout tabbed; exec [ $( ps -eo cmd | grep -c '[u]rxvt -title muttgmail -e mutt' ) -eq 2 ] && urxvt -title muttgmail -e mutt -e "source ~/.mutt/gmail.com"
 bindsym $mod+4 workspace $menu4; exec [ $( ps -eo cmd | grep -c '[t]ermite --title mail-gmail' ) -eq 2 ] && termite --title mail-gmail -e 'mutt -e "source ~/.mutt/gmail.com"'
-bindsym $mod+5 workspace $menu5; exec [ $( ps -eo cmd | grep -c '[t]ermite --title muttperso' ) -eq 2 ] && termite --title muttperso -e 'mutt -e "source ~/.mutt/newmanity.com"'
+bindsym $mod+5 workspace $menu5; exec chrome
+#bindsym $mod+5 workspace $menu5; exec [ $( ps -eo cmd | grep -c '[t]ermite --title muttperso' ) -eq 2 ] && termite --title muttperso -e 'mutt -e "source ~/.mutt/newmanity.com"'
 bindsym $mod+6 workspace $menu6; exec [ $( ps -eo cmd | grep -c '[t]ermite --title muttjit' ) -eq 2 ] && termite --title muttjit -e 'mutt -e "source ~/.mutt/jobintree.com"'
 bindsym $mod+7 workspace $menu7; exec [ $( ps -eo cmd | grep -c '[u]rxvt -title tmux-weechat -e ssh -t david@do.tyjak.net LANG=fr_FR.UTF-8 tmux a -t weechat' ) -eq 2 ] && urxvt -title tmux-weechat -e ssh -t david@do.tyjak.net LANG=fr_FR.UTF-8 tmux a -t weechat
 bindsym $mod+8 workspace 8
@@ -161,7 +162,7 @@ bindsym XF86AudioPause exec mpc toggle
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
-  font pango:Meslo LG S DZ for Powerline, Icons, FontAwesome, 10
+  font pango:Meslo LG S DZ, Icons, FontAwesome, 10
   status_command python ~/.config/i3/status.py
 	position top
   colors {
@@ -220,7 +221,7 @@ for_window [title="Franz"] sticky enable, border 1pixel, move scratchpad, resize
 for_window [title="scratchpad_ncmpcpp"] sticky enable, border 1pixel, move scratchpad, resize set 640  400, scratchpad show; 
 for_window [title="scratchpad_cal"] sticky enable, border 1pixel, move scratchpad, scratchpad show; 
 for_window [title="skype"] sticky enable, border 1pixel, move scratchpad, scratchpad show; 
-for_window [title=".*? Pole Emploi - Valoriser les données Slack$"] sticky enable, resize set 1000 600, border 1pixel, move scratchpad, scratchpad show; 
+for_window [class="Slack"] sticky enable, border 1pixel,move scratchpad, resize set 1800 1000,  scratchpad show; 
 for_window [title="iCloud"] sticky enable, border 1pixel, move scratchpad, scratchpad show; 
 
 client.focused #859900 #859900 #eee8d5 #859900
@@ -228,7 +229,8 @@ client.focused_inactive #073642 #073642 #586e75 #6c71c4
 client.unfocused #073642 #073642 #93a1a1 #586e75
 client.urgent #d33682 #d33682 #fdf6e3 #dc322f
 
-set $Locker i3lock -i ~/.config/wallpaper/solarized-dark.png -c 002b36 && sleep 1
+#set $Locker i3lock -i ~/.config/wallpaper/solarized-dark.png -c 002b36 && sleep 1
+set $Locker i3lock -c 002b36 && sleep 1
 
 # resize mod window $mod+r (you can also use the mouse for that)
 bindsym $mod+r mode "resize"
@@ -252,15 +254,17 @@ mode "resize" {
 
 # Press $mod+o followed by either f, t, Esc or Return to launch firefox,
 #  etc ... or return to the default mode, respectively.
-set $mode_launcher Launch: [f]irefox [c]hrome [r]emmina [w]riter
+set $mode_launcher Launch: [f]irefox [t]rello [s]lack [r]emmina [w]ork-env [W]riter
 bindsym $mod+p mode "$mode_launcher"
 
 mode "$mode_launcher" {
 
     bindsym f exec firefox, mode "default"
-    bindsym c exec google-chrome-stable, mode "default"
+    bindsym t exec trello, mode "default"
+    bindsym s exec slack, mode "default"
     bindsym r exec remmina, mode "default"
-    bindsym w exec writer, mode "default"
+    bindsym w exec trello && sleep 1 && chrome && vimb && slack, mode "default"
+    bindsym W exec writer, mode "default"
 
     bindsym Return mode "default"
     bindsym Escape mode "default"
@@ -310,7 +314,8 @@ mode "$mode_usbmount" {
 # system mode, hit power button to halt, suspend, reboot or shutdown 
 set $mode_system System [l] lock, [e] logout, [s] suspend, [h] hibernate, [r] reboot, [Shift]+[s] shutdown
 bindsym Pause mode "$mode_system"
-bindsym XF86Eject mode "$mode_system"
+bindsym XF86Sleep "$mode_system"
+bindsym XF86PowerOff mode "$mode_system"
 
 mode "$mode_system" {
 
