--- a/.config/termite/config
+++ b/.config/termite/config
@@ -7,7 +7,7 @@ allow_bold = true
 dynamic_title = true
 urgent_on_bell = true
 clickable_url = true
-font = Meslo LG S DZ for Powerline 9
+font = MesloLGSDZ Nerd Font Mono 10
 scrollback_lines = 10000
 search_wrap = true
 #icon_name = terminal
