Remove cached file and update rtv conf

--- a/.config/rtv/rtv.cfg
+++ b/.config/rtv/rtv.cfg
@@ -34,6 +34,15 @@ clear_auth = False
 ; Maximum number of opened links that will be saved in the history file.
 history_size = 200
 
+; Open external links using programs defined in the mailcap config.
+enable_media = True
+
+; Maximum number of columns for a comment
+max_comment_cols = 120
+
+; Hide username if logged in, display "Logged in" instead
+hide_username = False
+
 ################
 # OAuth Settings
 ################
@@ -53,6 +62,11 @@ oauth_redirect_port = 65000
 
 ; Access permissions that will be requested.
 oauth_scope = edit,history,identity,mysubreddits,privatemessages,read,report,save,submit,subscribe,vote
+
+; This is a separate token for the imgur api. It's used to extract images
+; from imgur links and albums so they can be opened with mailcap.
+; See https://imgur.com/account/settings/apps to generate your own key.
+imgur_client_id = 93396265f59dec9
 
 [bindings]
 ##############
@@ -98,6 +112,8 @@ MOVE_UP = k, <KEY_UP>
 MOVE_DOWN = j, <KEY_DOWN>
 PAGE_UP = m, <KEY_PPAGE>, <NAK>
 PAGE_DOWN = n, <KEY_NPAGE>, <EOT>
+PAGE_TOP = gg
+PAGE_BOTTOM = G
 UPVOTE = a
 DOWNVOTE = z
 LOGIN = u
@@ -105,7 +121,10 @@ DELETE = d
 EDIT = e
 INBOX = i
 REFRESH = r, <KEY_F5>
+PROMPT = /
 SAVE = w
+COPY_PERMALINK = y
+COPY_URL = Y
 
 ; Submission page
 SUBMISSION_TOGGLE_COMMENT = 0x20
@@ -114,13 +133,14 @@ SUBMISSION_POST = c
 SUBMISSION_EXIT = h, <KEY_LEFT>
 SUBMISSION_OPEN_IN_PAGER = l, <KEY_RIGHT>
 SUBMISSION_OPEN_IN_URLVIEWER = b
+SUBMISSION_GOTO_PARENT = K
+SUBMISSION_GOTO_SIBLING = J
 
 ; Subreddit page
 SUBREDDIT_SEARCH = f
-SUBREDDIT_PROMPT = /
 SUBREDDIT_POST = c
 SUBREDDIT_OPEN = l, <KEY_RIGHT>
-SUBREDDIT_OPEN_IN_BROWSER = o, <LF>, <KEY_ENTER>, <KEY_ENTER>
+SUBREDDIT_OPEN_IN_BROWSER = o, <LF>, <KEY_ENTER>
 SUBREDDIT_OPEN_SUBSCRIPTIONS = s
 SUBREDDIT_OPEN_MULTIREDDITS = S
 SUBREDDIT_FRONTPAGE = p
