--- a/.config/vimb/config
+++ b/.config/vimb/config
@@ -35,6 +35,10 @@ augroup bookmark
 	autocmd LoadFinished file:///*/bookmark.d/* e! bookmarkFileToHtml();
 augroup end
 
+augroup gistprint
+	autocmd LoadFinished https://gist.github.com/* e! printGistPage();
+augroup end
+
 # GUI color settings
 # Color scheme: Base16 Eighties (https://github.com/chriskempson/base16)
 set completion-css=color:#839496;background-color:#002b36;font:10pt DejaVu Sans Mono;
