--- a/.config/gtk-2.0/gtkfilechooser.ini
+++ b/.config/gtk-2.0/gtkfilechooser.ini
@@ -1,9 +1,9 @@
 [Filechooser Settings]
-LocationMode=path-bar
-ShowHidden=false
+LocationMode=filename-entry
+ShowHidden=true
 ShowSizeColumn=true
-GeometryX=540
-GeometryY=248
+GeometryX=0
+GeometryY=0
 GeometryWidth=840
 GeometryHeight=630
 SortColumn=modified
