--- a/.config/i3/config
+++ b/.config/i3/config
@@ -18,7 +18,7 @@ workspace_layout tabbed
 # clear in small sizes. However, if you need a lot of unicode glyphs or
 # right-to-left text rendering, you should instead use pango for rendering and
 # chose a FreeType font, such as:
-font pango:Meslo LG S DZ for Powerline, icons, FontAwesome, Devicons, 10
+font pango:MesloLGS Nerd Font, icons, FontAwesome, Devicons, 10
 
 # Use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
@@ -30,11 +30,11 @@ bindsym $mod+Return exec i3-sensible-terminal;
 bindsym $mod+Shift+q kill
 
 # start dmenu (a program launcher)
-bindsym $mod+d exec dmenu_run -i -nb '#859900' -nf '#eee8d5' -sb '#cb4b16' -fn 'MesloLGSDZ Nerd Font-10' -h 36
-bindsym $mod+c exec clipmenu -i -nb '#2aa198' -nf '#eee8d5' -sb '#cb4b16' -fn 'MesloLGSDZ Nerd Font-10' -h 36
-bindsym $mod+x exec passmenu -i -nb '#002b36' -nf '#eee8d5' -sb '#b58900' -fn 'MesloLGSDZ Nerd Font-10' -h 36
-bindsym $mod+Shift+x exec passmenu --type -i -nb '#002b36' -nf '#eee8d5' -sb '#b58900' -fn 'Meslo LG S DZ for Powerline-10' -h 24
-bindsym $mod+s exec quickswitch -w -d "dmenu -i -nb '#002b36' -nf '#eee8d5' -sb '#859900' -fn 'MesloLGSDZ Nerd Font-10' -h 36"
+bindsym $mod+d exec dmenu_run -i -nb '#859900' -nf '#eee8d5' -sb '#cb4b16' -fn 'MesloLGS Nerd Font-10' -h 24
+bindsym $mod+c exec clipmenu -i -nb '#2aa198' -nf '#eee8d5' -sb '#cb4b16' -fn 'MesloLGS Nerd Font-10' -h 24
+bindsym $mod+x exec passmenu -i -nb '#002b36' -nf '#eee8d5' -sb '#b58900' -fn 'MesloLGS Nerd Font-10' -h 24
+bindsym $mod+Shift+x exec passmenu --type -i -nb '#002b36' -nf '#eee8d5' -sb '#b58900' -fn 'MesloLGS Nerd Font-10' -h 24
+bindsym $mod+s exec quickswitch -w -d "dmenu -i -nb '#002b36' -nf '#eee8d5' -sb '#859900' -fn 'MesloLGS Nerd Font-10' -h 24"
 # There also is the (new) i3-dmenu-desktop which only displays applications
 # shipping a .desktop file. It is a wrapper around dmenu, so you need that
 # installed.
@@ -164,7 +164,7 @@ bindsym XF86AudioPause exec mpc toggle
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
-  font pango:Meslo LG S DZ, Icons, FontAwesome, 10
+  font pango:MesloLGS Nerd Font, Icons, FontAwesome, Devicons 10
   status_command python ~/.config/i3/status.py
 	position top
   colors {
