--- a/.config/i3/config
+++ b/.config/i3/config
@@ -315,7 +315,8 @@ mode "$mode_usbmount" {
 # system mode, hit power button to halt, suspend, reboot or shutdown 
 set $mode_system System [l] lock, [e] logout, [s] suspend, [h] hibernate, [r] reboot, [Shift]+[s] shutdown
 bindsym Pause mode "$mode_system"
-bindsym XF86Sleep "$mode_system"
+bindsym XF86Sleep mode "$mode_system"
+bindsym XF86Eject mode "$mode_system"
 bindsym XF86PowerOff mode "$mode_system"
 
 mode "$mode_system" {
@@ -325,7 +326,7 @@ mode "$mode_system" {
     bindsym s exec --no-startup-id $Locker && systemctl suspend, mode "default"
     bindsym h exec --no-startup-id $Locker && systemctl hibernate, mode "default"
     bindsym r exec --no-startup-id systemctl reboot, mode "default"
-    bindsym Shift+s exec --no-startup-id systemctl poweroff -i, mode "default"  
+    bindsym Shift+s exec --no-startup-id systemctl poweroff -i, mode "default"
 
     # back to normal: Enter or Escape
     bindsym Return mode "default"
