--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,7 @@ Session.vim
 !.config/newsbeuter/urls
 !.config/rtv/rtv.cfg
 !.config/termite
+!.config/tig
 !.config/todo
 !.config/vifm/colors/solarized-dark.vifm
 !.config/vifm/vifmrc
