--- a/.config/i3/config
+++ b/.config/i3/config
@@ -35,6 +35,9 @@ bindsym $mod+c exec clipmenu -i -nb '#2aa198' -nf '#eee8d5' -sb '#cb4b16' -fn 'M
 bindsym $mod+x exec passmenu -i -nb '#002b24' -nf '#eee8d5' -sb '#b58900' -fn 'MesloLGSDZ Nerd Font-10' -h 24
 bindsym $mod+Shift+x exec passmenu --type -i -nb '#002b24' -nf '#eee8d5' -sb '#b58900' -fn 'MesloLGSDZ Nerd Font-10' -h 24
 bindsym $mod+s exec quickswitch -w -d "dmenu -i -nb '#eee8d5' -nf '#002b24' -sb '#859900' -fn 'MesloLGSDZ Nerd Font-10' -h 24"
+bindsym $mod+t exec "dict -d fd-eng-fra $(xclip -o) | tail +4 | dmenu -i -nb '#eee8d5' -nf '#002b36' -sb '#859900' -fn 'MesloLGSDZ Nerd Font-10' -h 24"
+bindsym $mod+Shift+t exec "dict -d fd-fra-eng $(xclip -o) | tail +4 | dmenu -i -nb '#eee8d5' -nf '#002b36' -sb '#859900' -fn 'MesloLGSDZ Nerd Font-10' -h 24"
+bindsym $mod+Shift+d exec "export D_DICT_DB_OPT='-d english'; dict_lookup"
 # There also is the (new) i3-dmenu-desktop which only displays applications
 # shipping a .desktop file. It is a wrapper around dmenu, so you need that
 # installed.
@@ -164,9 +167,9 @@ bindsym XF86AudioPause exec mpc toggle
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
-  font pango:MesloLGSDZ Nerd Font, 10
+  font pango:MesloLGMDZ Nerd Font, 10
   status_command python ~/.config/i3/status.py
-	position top
+    position top
   colors {
     separator #93a1a1
     background #002b36
@@ -194,6 +197,7 @@ workspace_auto_back_and_forth yes
 #for_window [title="Twitter"] move right; resize shrink left 30 px or 30 ppt;
 for_window [title="david_adsnovo - Skype*"] focus, sticky enable, move right, resize shrink left 20 px or 20 ppt, layout split;
 for_window [title="Liste de contacts"] focus, sticky enable, move right, resize shrink left 20 px or 20 ppt, layout split;
+for_window [title="logs"] focus, sticky enable, move bottom, resize shrink bottom 5 ppt, layout split vertical;
 
 #for_window [title="vim"] title_format "<span font='devicons'> </span>%title"
 for_window [title="uvim"] border 1pixel
@@ -206,6 +210,7 @@ for_window [title="filemanager"] border 1pixel, layout tabbed;
 for_window [title="JACK.*"] floating enable;
 for_window [title="Molotov"] floating enable, resize set 1000 600, move absolute position center, sticky enable;
 for_window [title="pinentry"] floating enable;
+for_window [class="termite_dict"] floating enable, move absolute position center, border 1pixel;
 
 # assign graphic app to dedicated workspace
 assign [class="(pinta|Inkscape)"] graphic
@@ -257,15 +262,17 @@ mode "resize" {
 
 # Press $mod+o followed by either f, t, Esc or Return to launch firefox,
 #  etc ... or return to the default mode, respectively.
-set $mode_launcher Launch: [f]irefox [c]hrome [r]emmina [w]riter
+set $mode_launcher Launch: [f]irefox [t]rello [s]lack [r]emmina [w]ork-env [W]riter
 bindsym $mod+p mode "$mode_launcher"
 
 mode "$mode_launcher" {
 
     bindsym f exec firefox, mode "default"
-    bindsym c exec google-chrome-stable, mode "default"
+    bindsym t exec trello, mode "default"
+    bindsym s exec slack, mode "default"
     bindsym r exec remmina, mode "default"
-    bindsym w exec writer, mode "default"
+    bindsym w exec trello && sleep 1 && chrome && vimb && slack && dockerstartlbf && lbf && wikipe, mode "default"
+    bindsym W exec writer, mode "default"
 
     bindsym Return mode "default"
     bindsym Escape mode "default"
@@ -278,8 +285,8 @@ bindsym $mod+Shift+s mode "$mode_screenshot"
 mode "$mode_screenshot" {
 
     #bindsym s exec maim --opengl --magnify -s ~/Desktop/screenshot-$(date +%F-%H%M%S).png, mode "default"
-    bindsym s exec maim -s ~/Pictures/screenshot-$(date +%F-%H%M%S).png, mode "default"
-    bindsym f exec maim ~/Pictures/screenshot-$(date +%F-%H%M%S).png, mode "default"
+    bindsym s exec maim -s ~/Images/screenshot-$(date +%F-%H%M%S).png, mode "default"
+    bindsym f exec maim ~/Images/screenshot-$(date +%F-%H%M%S).png, mode "default"
 
     bindsym Return mode "default"
     bindsym Escape mode "default"
@@ -287,7 +294,7 @@ mode "$mode_screenshot" {
 
 # file navigation with ranger
 set $mode_filemanager Goto [h]ome [d]ownloads [s]hare [D]esktop
-bindsym $mod+Shift+d mode "$mode_filemanager"
+bindsym $mod+Shift+f mode "$mode_filemanager"
 
 mode "$mode_filemanager" {
 
@@ -305,10 +312,10 @@ mode "$mode_filemanager" {
 set $mode_usbmount USB [m]ount or [u]mount
 bindsym $mod+u mode "$mode_usbmount"
 mode "$mode_usbmount" {
-	bindsym m exec zsh -i -c 'udiskie-mount -2ar', mode "default"
-	bindsym u exec zsh -i -c 'udiskie-umount /run/media/*/*', mode "default"
-	bindsym Return mode "default"
-	bindsym Escape mode "default"
+    bindsym m exec zsh -i -c 'udiskie-mount -2ar', mode "default"
+    bindsym u exec zsh -i -c 'udiskie-umount /run/media/*/*', mode "default"
+    bindsym Return mode "default"
+    bindsym Escape mode "default"
 }
 
 
